--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Az RS Home Kft. Magyarországon szerkezet- és kulcsrakész társasházak építésével, valamint irodaházak és csarnokok generálkivitelezésével foglalkozik. Tapasztalt építőipari vállalkozóként biztosítjuk az építkezések zavartalan lebonyolítását és a magas minőségi elvárásoknak való megfelelést. Tekintsd meg referenciáinkat és kérd ajánlatunkat még ma!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>RS Home Kft. | Szerkezetkész és kulcsrakész társasházak építése, irodaházak és csarnokok generálkivitelezése</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
